# companies-house-abm

./: .gitignore  .pre-commit-config.yaml  ABM_SUMMARY.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  QUICKSTART.md  README.md  benchmark_results.json  feynman-session-2026-04-21T14-43-55-201Z_019db07f-70c0-706e-bcdc-f0fc242edc45.html  mkdocs.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml  docs.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-layer-contracts/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md
.planning/phases/02-utility-surface/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md  02-CONTEXT.md  02-UAT.md
.planning/phases/03-date-bounded-series/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
conf/base/: catalog.yml  catalog_parameters.yml  globals.yml  logging.yml  parameters_process.yml
config/: README.md  model_parameters.yml  sector_representative_model.yml
docs/: abm-design.md  abm_architecture.md  api.md  companies-house-package.md  contributing.md  firm-data-analysis.md  housing-market.md  implementation-roadmap.md  index.md  model_description.md  modelling-approach.md  roadmap.md  rust_integration.md  stochastic-bounded-rationality.md  uk-data-api.md  uk-data-package.md  uk-data-reference.md
docs/source/: conf.py  index.rst
earningsai/: client.py
notebooks/: 01_initial_analysis.md  01_introduction_to_abm.ipynb  abm_getting_started.ipynb  bank_agent.py  ecosystem.py  example_queries.ipynb  firm_agent.py  historical_simulation.py  household_agent.py  housing_market.py  langchain.ipynb  load_earnings_report.ipynb  metrics.csv  parse_combined_records.ipynb  parse_records.py  parse_taxonomy.ipynb  policy_agents.py  test.json  test.xml  test.xslx
outputs/: abm-consumer-goods-markets.md  abm-consumer-goods-markets.provenance.md  uk-housing-abm-literature.md  uk-housing-abm-literature.provenance.md
outputs/.drafts/: abm-consumer-goods-markets-research-direct.md  abm-consumer-goods-markets-verification.md  uk-housing-abm-literature-draft.md  uk-housing-abm-literature-research-direct.md  uk-housing-abm-literature-verification.md  uk-housing-abm-simulation-draft.md  uk-housing-abm-simulation-research-direct.md  uk-housing-abm-simulation-verification.md
outputs/.plans/: abm-consumer-goods-markets-T1.md  abm-consumer-goods-markets-T2.md  abm-consumer-goods-markets-T3.md  abm-consumer-goods-markets-T4.md  abm-consumer-goods-markets.md  uk-housing-abm-literature-T1.md  uk-housing-abm-literature-T2.md  uk-housing-abm-literature.md  uk-housing-abm-simulation-T1.md  uk-housing-abm-simulation-T2.md  uk-housing-abm-simulation-T3.md  uk-housing-abm-simulation-T4.md  uk-housing-abm-simulation.md
papers/: uk-housing-abm-simulation.md  uk-housing-abm-simulation.provenance.md
results/historical/: historical_results.csv
rust_abm/: Cargo.toml  pyproject.toml
rust_abm/src/: config.rs  state.rs
rust_abm/src/agents/: firm.rs  household.rs
rust_abm/src/markets/: credit.rs  labor.rs  mod.rs
scripts/: build_rust_abm.sh  dedupe_accounts.py  download_archive.py  extract_archive.py  import_xbrl.py  insert_db.py  parse_xbrl_json.py  run_benchmark.py  stream-xbrl.py
src/: pyproject.toml
src/companies_house/: __init__.py  pyproject.toml
src/companies_house/analysis/: benchmarks.py  forecasting.py
src/companies_house/api/: client.py
src/companies_house/ingest/: __init__.py  xbrl.py
src/companies_house/storage/: db.py  migrations.py
src/companies_house_abm/: __init__.py  cli.py  company_analysis.py  ingest.py  pyproject.toml
src/companies_house_abm/abm/: README.md  __init__.py  calibration.py  config.py  evaluation.py  model.py  sector_model.py
src/companies_house_abm/abm/agents/: __init__.py  bank.py  base.py  central_bank.py  firm.py  household.py
src/companies_house_abm/abm/assets/: __init__.py
src/companies_house_abm/abm/markets/: __init__.py  base.py  credit.py  goods.py  housing.py  labor.py
src/companies_house_abm/agents/: __init__.py  base.py  firm.py  household.py
src/companies_house_abm/data_sources/: __init__.py  _http.py  boe.py  calibration.py  companies_house.py  firm_distributions.py  land_registry.py  ons.py  ons_housing.py
src/companies_house_abm/webapp/: app.py  models.py
src/companies_house_abm/webapp/static/: app.js  index.html  styles.css
src/earningsai/: __init__.py  __main__.py  client.py  ixbrl_dataset.py  settings.py
src/earningsai/pipelines/process/: __init__.py  nodes.py  pipeline.py
src/tests/: test_parser.py  test_run.py  test_utils.py
src/tests/data/: Prod223_3517_13756628_20221130.html
src/tests/pipelines/process/: test_pipeline.py
tests/: conftest.py  test_abm_agents.py  test_abm_calibration.py  test_abm_config.py  test_abm_evaluation.py  test_abm_markets.py  test_abm_model.py  test_abm_performance.py  test_agents.py  test_bounded_rationality.py  test_client.py  test_companies_house_abm.py  test_companies_house_api.py  test_companies_house_pdf.py  test_companies_house_schema.py  test_companies_house_storage.py  test_company_analysis.py  test_data_sources.py  test_data_sources_integration.py  test_firm_distributions.py  test_historical_data.py  test_historical_integration.py  test_historical_simulation.py  test_housing_assets.py  test_housing_data_sources.py  test_housing_market.py  test_ingest.py  test_notebook.py  test_scenarios.py  test_sector_model.py  test_uk_data_client.py  test_uk_data_client_integration.py  test_uk_data_client_property_sources.py  test_webapp.py  test_xbrl_schema_integration.py
tests/adapters/: test_protocol_compliance.py
tests/fixtures/: Prod224_0012_01873499_20230131.html  Prod224_9953_00003006_20090731.xml
(+11 files in other folders)
