[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "companies_house_abm"
version = "0.1.0"
description = "Agent-Based Modelling using Companies House Account Data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "jstammers", email = "jimmy.stammers@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
keywords = []
dependencies = [
    "polars>=1.38.1",
    "stream-read-xbrl>=0.1.1",
    "typer>=0.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "ty>=0.0.14",
    "hatch>=1.16.3",
    "prek>=0.1.0",
    "pysentry-rs>=0.1.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.7.0",
    "mkdocstrings-python>=2.0.1",
]
abm = [
    "mesa>=3.0.0",
    "networkx>=3.2",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0.0",
    "marimo>=0.10.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/jstammers/companies-house-abm"
Documentation = "https://jstammers.github.io/companies-house-abm"
Repository = "https://github.com/jstammers/companies-house-abm"
Issues = "https://github.com/jstammers/companies-house-abm/issues"
Changelog = "https://github.com/jstammers/companies-house-abm/blob/main/CHANGELOG.md"

[project.scripts]
companies_house_abm = "companies_house_abm.cli:app"

# =============================================================================
# Hatch
# =============================================================================

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/companies_house_abm"]

# Matrix testing across Python versions
[tool.hatch.envs.test]

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]

# =============================================================================
# Ruff
# =============================================================================

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "RUF",    # Ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["companies_house_abm"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001"]
# Marimo notebooks use bare expressions to display output
"notebooks/**/*.py" = ["B018", "E501"]

# =============================================================================
# ty (Astral type checker)
# =============================================================================

[tool.ty.src]
root = "."
include = ["src/", "tests/"]

[tool.ty.rules]
# Polars stubs don't fully align with ty's inference yet
invalid-assignment = "ignore"
# Dynamic dict unpacking (**kwargs) for YAML config and Polars stubs
invalid-argument-type = "warn"
unresolved-attribute = "warn"
not-subscriptable = "ignore"

# =============================================================================
# Pytest
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# =============================================================================
# Coverage
# =============================================================================

[tool.coverage.run]
source = ["src/companies_house_abm"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true

# =============================================================================
# git-cliff (Changelog generation)
# =============================================================================

[tool.git-cliff]
config = "cliff.toml"
