[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "companies-house-abm-rust"
version = "0.1.0"
description = "Rust-backed ABM simulation core for Companies House data"
requires-python = ">=3.10"

[tool.maturin]
python-source = "python"
module-name = "companies_house_abm._rust_abm"
