[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "earningsai"
version = "0.1"
description = ""
authors = []
packages = [
    { include = "earningsai", from = "." },
]

[project.scripts]
earningsai = "earningsai.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
jupyter = "^1.0.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
kedro = "^0.18.13"
langchain = "^0.0.301"
unstructured = "^0.10.16"
tiktoken = "^0.5.1"
html5lib = "^1.1"
ixbrlparse = "^0.7.2"
arelle-release = {extras = ["db"], version = "^2.15.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"

[project.optional-dependencies]
docs = [
    "docutils<0.18.0",
    "sphinx~=3.4.3",
    "sphinx_rtd_theme==0.5.1",
    "nbsphinx==0.8.1",
    "nbstripout~=0.4",
    "sphinx-autodoc-typehints==1.11.1",
    "sphinx_copybutton==0.3.1",
    "ipykernel>=5.3, <7.0",
    "Jinja2<3.1.0",
    "myst-parser~=0.17.2",
]